--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
@@ -10,6 +10,10 @@
     "DefaultConnection": "Data source=skinet.db",
     "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "This is where you would put a better key than this.",
+    "Issuer": "https://localhost:5001"
   },
   "ApiUrl": "https://localhost:5001/"
 }
